--- a/src/style.css
+++ b/src/style.css
@@ -1,31 +1,48 @@
+html {
+    height: 100%;
+}
+
 body {
     margin: 0;
     font-family: sans-serif;
+    height: 100%;
 }
 #root {
-    min-height: 100vh;
-    background-color: coral;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
+    height: 100%;
+}
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
-.mark {
-    color: aquamarine;
+.container {
+    /* height: 100%; */
+    /* display: grid; */
+    /* grid-template-rows: 100px auto 50px; */
+    max-width: 1600px;
+    width: 100%;
+    margin: 0 auto;
+    
+   
+
 }
-.card {
-    width: 80px;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 8px;
-    border: 1px solid;
+.container>*{
+      /* padding: 0 calc(50% - 600px); */
+   
+    
 }
-.box {
+
+.cards {
     display: grid;
-    grid-template-columns: repeat(3, auto);
-    gap: 10px;
+    grid-template-columns: repeat(4,1fr);
+    gap: 2em;
+}
+
+@media (max-width: 1600px) {
+    .container {
+       /* padding: 0 30px; */
+    }
+    .cards {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
