--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,14 +1,20 @@
 .header__wrapper {
 width: 100%;
+height: 80px;
 background-color: rgb(243, 231, 5);
 
+}
+.container__wrapper {
+    padding: 0 30px;
 }
 .header {   
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* gap: 30px;    */
-    /* margin: 0 30px; */
+    gap: 30px; 
+     margin: 0 30px;
+     padding-top: 20px;
+     
 }
 .logo {
     font-size: 1.5em;
