--- a/src/style.css
+++ b/src/style.css
@@ -14,12 +14,17 @@ a {
     text-decoration: none;
     color: inherit;
 }
+main {
+    height: calc(100vh - 116px);
+
+    
+}
 
 .container {
     /* height: 100%; */
     /* display: grid; */
     /* grid-template-rows: 100px auto 50px; */
-    max-width: 1600px;
+     max-width: 1600px;
     width: 100%;
     margin: 0 auto;
     
