--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -12,7 +12,7 @@ background-color: rgb(243, 231, 5);
     justify-content: space-between;
     align-items: center;
     gap: 30px; 
-     margin: 0 30px;
+     /* margin: 0 30px; */
      padding-top: 20px;
      
 }
