--- a/src/style.css
+++ b/src/style.css
@@ -51,3 +51,26 @@ main {
         grid-template-columns: repeat(3, 1fr);
     }
 }
+.empty-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    font-size: 4rem;
+    height: 100%;
+    justify-content: center;
+}
+ .empty-block >*:not(svg) {
+    font-size: 1rem;
+    
+}
+.empty-block svg {
+    font-size: 4rem;
+    fill: #979797;
+}
+.empty-block .btn {
+    border: 1px solid #dedede;
+    border-radius: 18px;
+    display: flex;
+    padding: 6px 12px;
+}
