--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,9 +1,15 @@
  .footer__wrapper {
-     width: 100%;
+   width: 100%;
+   background-color: rgb(243, 231, 5);
+   height: 100px;
+     position: fixed;
+     bottom: 0;
+     /* overflow: hidden; */
+   
    
     
  }
- .container__wrapp {
+ .container__wrapper {
      padding: 0 30px;
      /* background-color: #222; */
      
@@ -12,7 +18,7 @@
  
  
  .footer {
-    background-color: #222;
+   background-color: rgb(243, 231, 5);
     color: #fff;
     display: flex;
     justify-content: space-between;
@@ -21,8 +27,20 @@
  }
  .footer_copy {
     font-size: 1.5em;
+    color: black;
  }
  .footer_text {
     text-align: right;
+    color: black;
     
+ }
+ .iconsWrapper {
+   display: flex;
+   justify-content: flex-end;
+   gap: 10px;
+ }
+ .iconsSize {
+  
+
+
  }
