--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,6 @@
+* {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
 html {
     height: 100%;
 }
@@ -8,44 +11,59 @@ body {
     height: 100%;
 }
 #root {
-    height: 100%;
+    height: 100vh;
 }
 a {
     text-decoration: none;
     color: inherit;
 }
 main {
-    height: calc(100vh - 116px);
+    height: 100%;
+    /* calc(100vh - 128px); */
+
 
     
 }
 
-.container {
-    /* height: 100%; */
+.wrapper {
+     height: 100%;
     /* display: grid; */
     /* grid-template-rows: 100px auto 50px; */
-     max-width: 1600px;
+     max-width: 1400px;
     width: 100%;
     margin: 0 auto;
     
    
 
 }
-.container>*{
-      /* padding: 0 calc(50% - 600px); */
+.wrapper>*{
+       padding: 0 calc(50% - 600px);
+       min-height: 1200px;
    
     
 }
 
 .cards {
+    object-fit: contain;
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    gap: 2em;
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1em;
+    padding-bottom: 120px;
+   
+
+    
+    
+    
+}
+.btn.sort {
+    background-color: black;
+    color: orange ;
 }
 
 @media (max-width: 1600px) {
-    .container {
-       /* padding: 0 30px; */
+    .wrapper {
+       padding: 0 30px;
     }
     .cards {
         grid-template-columns: repeat(3, 1fr);
@@ -73,4 +91,11 @@ main {
     border-radius: 18px;
     display: flex;
     padding: 6px 12px;
+}
+
+.form-preview {
+    height: 106px;
+    background-size: contain;
+    background-position: top right;
+    background-repeat: no-repeat;
 }
