--- a/src/style.css
+++ b/src/style.css
@@ -71,12 +71,12 @@ main {
 }
 .empty-block {
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     align-items: center;
     gap: 10px;
     font-size: 4rem;
     height: 100%;
-    justify-content: center;
+    justify-content: flex-start;
 }
  .empty-block >*:not(svg) {
     font-size: 1rem;
